feat(theoros_validators): Theoros validators stuff
