# rust/theoros/openapi.json
@@ -1,1 +1,117 @@
-{"openapi":"3.0.3","info":{"title":"theoros","description":"","license":{"name":""},"version":"0.1.0"},"paths":{"/v1/calldata":{"get":{"tags":["crate::handlers::get_calldata"],"operationId":"get_calldata","parameters":[],"responses":{"200":{"description":"Get the calldata","content":{"application/json":{"schema":{"type":"array","items":{"$ref":"#/components/schemas/GetCalldataResponse"}}}}}}}}},"components":{"schemas":{"GetCalldataError":{"type":"string","enum":["InternalServerError","DatabaseConnection"]},"GetCalldataQuery":{"type":"object"},"GetCalldataResponse":{"type":"object","required":["hash"],"properties":{"hash":{"type":"string"}}}},"responses":{"GetCalldataResponse":{"description":"","content":{"application/json":{"schema":{"type":"object","required":["hash"],"properties":{"hash":{"type":"string"}}}}}}}},"tags":[{"name":"theoros","description":"Theoros - the Pragma Consultant"}]}
+{
+  "openapi": "3.0.3",
+  "info": {
+    "title": "theoros",
+    "description": "",
+    "license": {
+      "name": ""
+    },
+    "version": "0.1.0"
+  },
+  "paths": {
+    "/v1/calldata": {
+      "get": {
+        "tags": [
+          "crate::handlers::get_calldata"
+        ],
+        "operationId": "get_calldata",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Get the calldata",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/GetCalldataResponse"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "GetCalldataError": {
+        "type": "string",
+        "enum": [
+          "InternalServerError",
+          "DatabaseConnection"
+        ]
+      },
+      "GetCalldataQuery": {
+        "type": "object"
+      },
+      "GetCalldataResponse": {
+        "type": "object",
+        "required": [
+          "hash"
+        ],
+        "properties": {
+          "hash": {
+            "type": "string"
+          }
+        }
+      },
+      "GetDataFeedsError": {
+        "type": "string",
+        "enum": [
+          "InternalServerError",
+          "DatabaseConnection"
+        ]
+      },
+      "GetDataFeedsQuery": {
+        "type": "object"
+      },
+      "GetDataFeedsResponse": {
+        "type": "array",
+        "items": {
+          "type": "string"
+        }
+      }
+    },
+    "responses": {
+      "GetCalldataResponse": {
+        "description": "",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "hash"
+              ],
+              "properties": {
+                "hash": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      },
+      "GetDataFeedsResponse": {
+        "description": "",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "tags": [
+    {
+      "name": "theoros",
+      "description": "Theoros - the Pragma Consultant"
+    }
+  ]
+}
