# rust/theoros/src/handlers/get_calldata.rs
@@ -4,6 +4,7 @@ use serde::{Deserialize, Serialize};
 use utoipa::{IntoParams, ToResponse, ToSchema};
 
 use crate::errors::GetCalldataError;
+use crate::extractors::PathExtractor;
 use crate::AppState;
 
 #[derive(Default, Deserialize, IntoParams, ToSchema)]
@@ -16,10 +17,13 @@ pub struct GetCalldataResponse {
 
 #[utoipa::path(
     get,
-    // TODO: path
-    path = "/v1/calldata",
+    path = "/v1/calldata/{data_feed_id}",
     responses(
-        (status = 200, description = "Get the calldata", body = [GetCalldataResponse])
+        (
+            status = 200,
+            description = "Constructs the calldata used to update the data feed id specified",
+            body = [GetCalldataResponse]
+        )
     ),
     params(
         GetCalldataQuery
@@ -27,8 +31,9 @@ pub struct GetCalldataResponse {
 )]
 pub async fn get_calldata(
     State(_state): State<AppState>,
+    PathExtractor(data_feed_id): PathExtractor<String>,
     Query(_params): Query<GetCalldataQuery>,
 ) -> Result<Json<GetCalldataResponse>, GetCalldataError> {
-    tracing::info!("Received get calldata request");
+    tracing::info!("Received get calldata request for feed: {data_feed_id}");
     Ok(Json(GetCalldataResponse::default()))
 }
